examples/test/testpolicy4868.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4868
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key30: value20
      key47: value37
      key27: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value37
          key5: value14
          key30: value29
      podSelector:
        matchLabels:
          key25: value5
